--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -27,12 +27,36 @@ body, html, #root, .app, .container {
   height: 100%;
 }
 
+.error-message {
+  color: red;
+  width:80%;
+  line-height: 1;
+}
+
+#filler-for-error-message {
+  color: var(--off-white);
+  width: 80%;
+  line-height: 1;
+}
+
+a {
+   color: var(--light-peach) !important;
+   text-decoration: underline !important;
+   /* text-decoration: none; */
+ }
+ 
+ a:hover,
+ a:focus,
+ a.active {
+   color: var(--dark-peach) !important;
+   text-decoration: none  !important;
+ }
 
 .login-vertical-align-middle {
   align-items: center;
   vertical-align: middle;
   position: relative;
-  top: 15%;
+  top: 7%;
   width: 100%;
   /* display:block;
   margin:auto; */
@@ -43,6 +67,12 @@ body, html, #root, .app, .container {
   /* background-color: white; */
   align-items: center;
   vertical-align: middle;
+}
+
+#login-form-title {
+  color: var(--dark-peach);
+  margin: 0;
+  padding:0;
 }
 
 #login-logo {
