--- a/frontend/src/css/Login.css
+++ b/frontend/src/css/Login.css
@@ -70,7 +70,7 @@
 }
 
 #login-form-alternate-provider-icon {
-  width: 40px;
+  width: 30px;
   padding: 0;
   margin: 0;
 }
@@ -116,4 +116,22 @@
   margin-right: 0px;
   margin-bottom: 0px;
   display: inline-block;
+}
+
+#login-redirect {
+  color: var(--light-peach) !important;
+  text-decoration: underline !important;
+}
+ 
+#login-redirect:hover,
+#login-redirect:focus,
+#login-redirect.active {
+  color: var(--dark-peach) !important;
+  text-decoration: none  !important;
+}
+
+#login-error-message {
+  color: red;
+  width:80%;
+  line-height: 1;
 }
