--- a/frontend/src/css/Sidebar.css
+++ b/frontend/src/css/Sidebar.css
@@ -117,3 +117,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
   border-top: 7px double var(--medium-green);
   margin-top: 5%;
 }
+
+#sidebar-logout-button {
+  cursor: pointer !important;
+}
