--- a/frontend/src/css/MemoGallery.css
+++ b/frontend/src/css/MemoGallery.css
@@ -1,16 +1,26 @@
 /* layout */
+#memo-page{
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+#memos-header {
+  margin-top: 5%;
+  margin-left: 5%;
+  color: var(--off-white);
+}
+
+#memos-add-box {
+  /* margin-left: 5%; */
+}
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-  grid-template-rows: minmax(14rem, 1fr);
-  grid-auto-rows: 1fr;
-  grid-gap: 16px;
-  grid-auto-flow: dense;
-}
-
-.grid-template-columns {
-  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  grid-template-rows: minmax(15rem, 15em);
+  grid-auto-rows: 15em;
+  grid-gap: 0px;
+  /* grid-auto-flow: dense; */
 }
 
 .grid-gap {
@@ -20,23 +30,63 @@
 /* styling */
 
 .memo-card--expanded {
-  grid-column: span 3;
+  grid-column: span 2;
   grid-row: span 2;
 }
 
 .memo-card {
   cursor: pointer;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 1rem;
+
+  background-color: var(--off-white);
+  border: 5px solid var(--dark-green);
+  border-radius: 7%;
+  /* font-family: "Nunito", serif; */
+  color: var(--dark-peach);
+
+
+  /*      top right bottom left */
+  padding: 0% 5% 5% 5%;
+  margin:0;
 }
 
 .memo-card > div {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  overflow: hidden;
+  width: 100%;
+}
+
+
+
+/* So that in minimized view, you can still scroll to see all the words */
+.memo-card-content {
+  padding-bottom: 30%;
+  margin-bottom: 30%;
+  font-weight: 400;
+}
+
+.memo-card-title {
+  font-weight: 600;
+  margin-top: 0;
+}
+
+.memo-card-time-stamp {
+  display:inline-block;
+  margin-bottom: 0;
+  font-weight: 200;
+  color: var(--medium-peach);
+  margin-top: 1%
+}
+
+.memo-card-remove-button {
+  margin-bottom: 0;
+  float: right;
+  color: var(--medium-peach);
+  margin-top: 2%;
+  
+}
+
+.memo-card-remove-button:hover {
+  color: #e0544a;
 }
 
 /* .card--1 {
@@ -57,51 +107,4 @@
 
 .card--5 {
   background-color: #dc5263;
-} */
-
-/* body {
-  background-color: #191919;
-  color: lightgray;
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI",
-    "Roboto", "Helvetica Neue", Arial, sans-serif;
-  font-size: 1.1rem;
-} */
-
-/* .mb-4 {
-  margin-bottom: 1rem;
-}
-
-.pt-4 {
-  margin-top: 1rem;
-}
-
-.p-4 {
-  padding: 1rem;
-} */
-
-/* button {
-  padding: 0.75rem;
-  margin-right: 0.75rem;
-  background-color: #191919;
-  color: lightgray;
-  border: 1px solid lightgray;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: hsla(0, 0%, 83%, 0.05);
-}
-button:focus {
-  box-shadow: 0 0 0 3px #7396e4;
-  outline: none;
-}
-
-a {
-  font-weight: bold;
-  color: #7396e4;
-}
-
-code {
-  color: #7396e4;
 } */
