--- a/frontend/src/css/Sidebar.css
+++ b/frontend/src/css/Sidebar.css
@@ -3,8 +3,8 @@
   position: fixed;
   width: 24px;
   height: 20px;
-  left: 36px;
-  top: 36px;
+  left: 2%;
+  top: 3%;
 }
 
 /* Color/shape of burger icon bars */
