--- a/frontend/src/css/Register.css
+++ b/frontend/src/css/Register.css
@@ -69,17 +69,18 @@
   width: fit-content;
 }
 
-#register-form-alternate-provider-icon {
+.register-form-alternate-provider-icon {
   width: 30px;
   padding: 0;
   margin: 0;
+  color: var(--medium-peach);
 }
 
 #register-form-text {
   color: var(--light-peach);
   vertical-align: middle;
   margin-top:2%;
-  margin-right:3%;
+  margin-right:2%;
 }
 
 #register-decoration-1 {
