--- a/frontend/src/css/Dashboard.css
+++ b/frontend/src/css/Dashboard.css
@@ -6,7 +6,7 @@
 
 .dashboard-clock {
     color: var(--off-white);
-    font-size: 1000%;
+    font-size: 800%;
     font-weight: 500;
     display: block;
 }
@@ -21,4 +21,54 @@
 #dashboard-welcome-message {
     padding-top: 1%;
     color: var(--light-peach);
+    margin-bottom: 10%;
+}
+
+.waves {
+  position:absolute;
+  width: 100%;
+  height: 30vh;
+  bottom: 0%;
+  left:0%;
+}
+
+
+/* Animation */
+
+.parallax > use {
+  animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
+}
+.parallax > use:nth-child(1) {
+  animation-delay: -2s;
+  animation-duration: 7s;
+}
+.parallax > use:nth-child(2) {
+  animation-delay: -3s;
+  animation-duration: 10s;
+}
+.parallax > use:nth-child(3) {
+  animation-delay: -4s;
+  animation-duration: 13s;
+}
+.parallax > use:nth-child(4) {
+  animation-delay: -5s;
+  animation-duration: 20s;
+}
+@keyframes move-forever {
+  0% {
+   transform: translate3d(-90px,0,0);
+  }
+  100% { 
+    transform: translate3d(85px,0,0);
+  }
+}
+/*Shrinking for mobile*/
+@media (max-width: 768px) {
+  .waves {
+    height:40px;
+    min-height:40px;
+  }
+  .content {
+    height:30vh;
+  }
 }
