--- a/frontend/src/css/Login.css
+++ b/frontend/src/css/Login.css
@@ -12,6 +12,9 @@
   background-size:100%; 
   align-items: center;
   vertical-align: middle;
+  background-image: url(../img/center_background.png);
+  background-repeat: repeat-x;
+  background-position: center;
 }
 
 #login-form-title {
