--- a/frontend/src/css/Register.css
+++ b/frontend/src/css/Register.css
@@ -12,6 +12,9 @@
   background-size:100%; 
   align-items: center;
   vertical-align: middle;
+  background-image: url(../img/register_center_background.png);
+  background-repeat: repeat-x;
+  background-position: center;
 }
 
 #register-form-title {
