it's padding-bottom not padding-down sigh

--- a/frontend/src/css/HomePage.css
+++ b/frontend/src/css/HomePage.css
@@ -71,7 +71,7 @@
     padding-left: 3%;
     padding-right: 3%;
     padding-top: 1%;
-    padding-down: 1%;
+    padding-bottom: 1%;
     margin-top: 2%;
     background-color: var(--medium-peach);
     border: none;
